Change sign up contract
