# src/main/resources/openapi/openapi.yaml
@@ -25,7 +25,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/SignUpRequest'
       responses:
         201:
           description: Created
@@ -136,6 +136,17 @@ components:
         refreshToken:
           type: string
           x-format: not-blank
+
+    SignUpRequest:
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+          writeOnly: true
 
     User:
       required:
